# prompt-island

./: .env.example  .gitignore  challenges.py  main.py  prd  pyproject.toml
.claude/commands/: 02_EXPLORE.md  03_CREATE_PLAN.md  04_EXECUTE.md  05_REVIEW.md  06_DOCUMENT.md
docs/: ARCHITECTURE.md  CONSTRAINTS_AND_MODELS.md  DATABASE_SCHEMA.md  ERROR_HANDLING.md  FRONTEND_AND_STREAM.md  GAME_LOOP.md  MEMORY_AND_RAG.md  OBS_SETUP.md  PERSONA_GUIDELINES.md  PHASE5_VISUAL_CHARACTERS.md  PHASE6_TWITCH_INTEGRATION.md  PRD.md  PRE_STREAM_CHECKLIST.md
docs/workflow/: 00_CTO_PROJECT.md  01_CREATE_ISSUE.md
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/maps/: island.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Confessional.tsx  FinaleVotePanel.tsx  HubChat.tsx  StatusBar.tsx
personas/: chaos_agent.md  empath.md  floater.md  machiavelli.md  paranoid.md  pedant.md
scripts/: assemble_sprite_sheets.py  compose_tileset.py  generate_island_map.py  generate_references.py  generate_sprite_sheets.py  generate_tiles.py  setup_voices.py  validate_assets.py
src/: __init__.py
src/agents/: controller.py  providers.py  registry.py  schemas.py
src/api/: server.py
src/broadcast/: __init__.py  broadcaster.py
src/db/: database.py  models.py
src/engine/: __init__.py  game_loop.py  season_config.py  twist_engine.py  viewer_vote_manager.py
src/integrations/: twitch_bot.py
src/memory/: chroma_store.py  manager.py
src/utils/: logger.py
(+11 files in other folders)
